--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
         </div>
         <div class="last">
             <li>Log in</li>
-            <li><a href="signup.html">Sign up</a></li>
+            <li>Sign up</li>
         </div>
     </div>
     <div class="Howto" id="Howto">
@@ -92,7 +92,18 @@
             </div>
         </div> 
     </div>
-    
+    <div class="body">
+        <div class="signup">
+            <form action="#">
+                <div class="inputs">
+                    <p>First name</p><input type="text">
+                </div>
+                <div class="inputs">
+                    <p>Last name</p><input type="text">
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 <script src="app.js"></script>
 </html>
