--- a/signup.html
+++ b/signup.html
@@ -96,10 +96,22 @@
         <div class="signup">
             <form action="#">
                 <div class="inputs">
-                    <p>First name</p><input type="text">
+                    <p>First name</p><input placeholder="Gloria" type="text">
                 </div>
                 <div class="inputs">
-                    <p>Last name</p><input type="text">
+                    <p>Last name</p><input placeholder="Cherono"type="text">
+                </div>
+                <div class="inputs">
+                    <p>Email</p><input placeholder="gloriacherono121@gmail.com" type="email">
+                </div>
+                <div class="inputs">
+                    <p>Password</p><input type="password">
+                </div>
+                <div class="inputs">
+                    <p>Confirm password</p><input type="password">
+                </div>
+                <div class="inputs">
+                    <input value="Sign up" type="submit"id="aqua"> 
                 </div>
             </form>
         </div>
